ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dreadflix-ingress
  namespace: default
  annotations:
    #alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
    #alb.ingress.kubernetes.io/backend-protocol: HTTP
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    #alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
  - host: "k8s-default-mindcast-55b5df1e6d-534149313.eu-west-2.elb.amazonaws.com"
    http:
      paths:

      - path: "/movies"
        pathType: Prefix
        backend:
          service:
            name: stream-video-service
            port:
              number: 3007

      - path: "/user-auth"
        pathType: Prefix
        backend:
          service:
            name: user-auth-service
            port:
              number: 3008

      - path: "/upload"
        pathType: Prefix
        backend:
          service:
            name: upload-video-service
            port:
              number: 3009

      - path: "/discovery"
        pathType: Prefix
        backend:
          service:
            name: node-neo4j-service
            port:
              number: 3010
